--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,4 @@ NotNull=Is mandatory
 mail=It must be a valid email address
 Size={0} Must be at least {2} and no more than {1} characters
 Pattern.plate=It must be a valid plate
+Positive=The value must be positive
